--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "if [ -z \"$RUN_IOS_SETUP\" ] || [ \"$RUN_IOS_SETUP\" = \"null\" ]; then uname -m | grep -q 'arm64' && arch -arm64 pod-install || pod-install; fi"
   },
   "dependencies": {
     "react": "18.3.1",
