--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "postinstall": "if [ -z \"$RUN_IOS_SETUP\" ] || [ \"$RUN_IOS_SETUP\" = \"null\" ]; then uname -m | grep -q 'arm64' && arch -arm64 pod-install || pod-install; fi"
+    "postinstall": "cd ios && pod install"
   },
   "dependencies": {
     "react": "18.3.1",
