--- a/package.json
+++ b/package.json
@@ -11,8 +11,37 @@
     "postinstall": "cd ios && pod install"
   },
   "dependencies": {
+    "@gluestack-style/react": "^1.0.52",
+    "@gluestack-ui/config": "^1.1.18",
+    "@gluestack-ui/themed": "^1.1.18",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.3.29",
+    "@tanstack/react-query": "^5.44.0",
+    "axios": "^1.6.8",
+    "base-64": "^1.0.0",
+    "i18next": "^23.10.1",
+    "lottie-react-native": "5.1.6",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-config": "^1.5.1",
+    "react-native-device-info": "^11.1.0",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-localize": "^3.2.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-quick-base64": "^2.1.2",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.34.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
