--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-indicators": "^0.17.0",
     "react-native-localize": "^3.2.0",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-permissions": "^4.1.5",
