--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "base-64": "^1.0.0",
     "i18next": "^23.10.1",
     "lottie-react-native": "5.1.6",
+    "lucide-react-native": "^0.515.0",
     "moment": "^2.30.1",
+    "moti": "^0.30.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-biometrics": "^3.0.1",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.16.0",
