--- a/ios/JackMarvelsApp/Info.plist
+++ b/ios/JackMarvelsApp/Info.plist
@@ -27,6 +27,14 @@
 	
 
 	
+	<!-- Camera Permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>JackMarvelsApp needs camera access to record videos for talent show events.</string>
+	
+	<!-- Microphone Permissions -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>JackMarvelsApp needs microphone access to record audio for videos.</string>
+	
 	<!-- Photo Library Permissions -->
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>JackMarvelsApp needs photo library access to select and upload videos for talent show events.</string>
@@ -56,6 +64,13 @@
 				<string>TLSv1.2</string>
 			</dict>
 			<key>34.244.102.127</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+			<key>98.93.175.154</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
