--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "react-native-otp-textinput": "^1.1.7",
     "react-native-permissions": "^4.1.5",
     "react-native-push-notification": "^8.1.1",
-    "react-native-razorpay": "^2.3.0",
+    "react-native-razorpay": "2.3.1",
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.12.0",
     "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.4.1",
