Remove outdated documentation and files
- Deleted several markdown files including API documentation, build flavors guide, CI/CD setup guide, permissions implementation, and others to streamline the project and remove obsolete content.
- Removed legacy files related to mock API integration and translation guide to focus on current implementation and improve maintainability.
- Cleaned up the project structure by eliminating unnecessary files that are no longer relevant to the current development workflow.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:report": "jest --coverage --coverageReporters=text --coverageReporters=html --coverageReporters=json",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "type-check": "tsc --noEmit",
-    "postinstall": "if command -v pod >/dev/null 2>&1 || command -v bundle >/dev/null 2>&1; then cd ios && (pod install || bundle exec pod install || true); else echo 'Warning: CocoaPods not found. Skipping pod install. Run: gem install cocoapods or bundle install'; fi",
+    "postinstall": "if [ -d 'ios' ] && command -v bundle >/dev/null 2>&1; then cd ios && bundle exec pod install || true; elif [ -d 'ios' ] && command -v pod >/dev/null 2>&1; then cd ios && pod install || true; fi",
     "clean": "rm -rf node_modules && yarn install",
     "clean:metro": "npx react-native start --reset-cache",
     "build:android": "cd android && ./gradlew assembleRelease",
