--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-indicators": "^0.17.0",
     "react-native-keychain": "^8.1.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-markdown-display": "^7.0.2",
     "react-native-otp-textinput": "^1.1.7",
     "react-native-permissions": "^4.1.5",
