--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.firebase.appdistribution"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -25,7 +26,7 @@ react {
 
     /* Bundling */
     //   A list containing the node command and its flags. Default is just 'node'.
-    // nodeExecutableAndArgs = ["node"]
+    nodeExecutableAndArgs = ["/Users/nagasainathpalle/.nvm/versions/node/v20.19.4/bin/node"]
     //
     //   The command to run when bundling. By default is 'bundle'
     // bundleCommand = "ram-bundle"
@@ -58,6 +59,15 @@ react {
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
 def enableProguardInReleaseBuilds = false
+
+/**
+ * Load keystore properties from keystore.properties file
+ */
+def keystorePropertiesFile = rootProject.file("app/keystore.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -93,13 +103,13 @@ android {
             dimension "environment"
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
-            resValue "string", "app_name", "JackMarvels Dev"
+            resValue "string", "app_name", "Alpha Vlogs Dev"
             // Use debug signing for develop builds
             signingConfig signingConfigs.debug
         }
         production {
             dimension "environment"
-            resValue "string", "app_name", "JackMarvelsApp"
+            resValue "string", "app_name", "Alpha Vlogs"
             // Production builds will use release signing config
         }
     }
@@ -112,13 +122,18 @@ android {
             keyPassword 'android'
         }
         release {
-            // TODO: Configure production keystore
-            // For now, using debug keystore (NOT for production!)
-            // see https://reactnative.dev/docs/signed-apk-android
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            if (keystorePropertiesFile.exists()) {
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+            } else {
+                // Fallback to debug keystore if properties file doesn't exist
+                storeFile file('debug.keystore')
+                storePassword 'android'
+                keyAlias 'androiddebugkey'
+                keyPassword 'android'
+            }
         }
     }
     buildTypes {
@@ -129,6 +144,25 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+    }
+
+    // Firebase App Distribution configuration
+    // See: https://firebase.google.com/docs/app-distribution/android/distribute-gradle
+    // To distribute a build, run: ./gradlew app:appDistributionUploadDevelopRelease
+    // or: ./gradlew app:appDistributionUploadProductionRelease
+    firebaseAppDistribution {
+        appId = "1:452248149004:android:183407f46643d288af2229"
+        groups = ["testers"]
+        releaseNotes = "Alpha Vlogs build"
+        
+        // Service account credentials for CI/CD
+        // Can be set via Gradle property: -PfirebaseServiceAccountFile=/path/to/file.json
+        // Or via environment variable: FIREBASE_SERVICE_ACCOUNT_FILE
+        def serviceAccountFile = project.findProperty("firebaseServiceAccountFile") 
+            ?: System.getenv("FIREBASE_SERVICE_ACCOUNT_FILE")
+        if (serviceAccountFile) {
+            serviceCredentialsFile = file(serviceAccountFile)
         }
     }
 }
@@ -142,6 +176,12 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:34.7.0')
+
+    // Firebase Analytics
+    implementation 'com.google.firebase:firebase-analytics'
 }
 
 configurations.all {
@@ -150,3 +190,5 @@ configurations.all {
         exclude group: 'com.android.support', module: 'support-compat'
     }
 }
+apply plugin: "com.google.gms.google-services"
+
