--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,3 +43,9 @@ hermesEnabled=true
 
 # Suppress unsupported compile SDK warning
 android.suppressUnsupportedCompileSdk=35
+
+# Node.js path for Gradle builds
+# This ensures Gradle can find node when building native modules like react-native-svg
+# If using nvm, update this path to your current node version
+# You can find it by running: which node
+org.gradle.project.nodeExecutableAndArgs=/Users/nagasainathpalle/.nvm/versions/node/v20.19.4/bin/node
