Add Node.js verification step in CI workflows
- Introduced a new step in the CI workflows for Android publishing, development, and production to verify the Node.js version and its availability in the PATH.
- Updated the build.gradle file to dynamically set the Node.js executable path, falling back to the default 'node' if the local path does not exist.

--- a/.github/workflows/android-publish.yml
+++ b/.github/workflows/android-publish.yml
@@ -38,6 +38,12 @@ jobs:
           node-version: '18'
           cache: 'yarn'
 
+      - name: Verify Node.js
+        run: |
+          echo "Node.js version: $(node --version)"
+          echo "Node.js path: $(which node)"
+          echo "✅ Node.js is available in PATH"
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
