--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -51,6 +51,12 @@ jobs:
           node-version: '18'
           cache: 'yarn'
 
+      - name: Verify Node.js
+        run: |
+          echo "Node.js version: $(node --version)"
+          echo "Node.js path: $(which node)"
+          echo "✅ Node.js is available in PATH"
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
