--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,10 @@ react {
 
     /* Bundling */
     //   A list containing the node command and its flags. Default is just 'node'.
-    nodeExecutableAndArgs = ["/Users/nagasainathpalle/.nvm/versions/node/v20.19.4/bin/node"]
+    // Use local Node.js path if it exists, otherwise use 'node' from PATH (for CI/CD)
+    def localNodePath = "/Users/nagasainathpalle/.nvm/versions/node/v20.19.4/bin/node"
+    def nodeExecutable = new File(localNodePath).exists() ? localNodePath : "node"
+    nodeExecutableAndArgs = [nodeExecutable]
     //
     //   The command to run when bundling. By default is 'bundle'
     // bundleCommand = "ram-bundle"
