Refactor Firebase App Distribution process in CI workflows
- Updated the CI workflows to utilize Firebase CLI for uploading APK and AAB files, enhancing reliability and error handling.
- Added a check to install Firebase CLI if not already available, ensuring smooth execution of upload commands.
- Improved logging to provide clearer information about the upload process, including project details and app IDs.
- Adjusted the default app ID in the build.gradle and google-services.json files to align with the new development setup.

--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -146,23 +146,47 @@ jobs:
           echo "✅ APK found: $APK_PATH"
           echo "📦 APK size: $(du -h "$APK_PATH" | cut -f1)"
 
-          cd android
-          # Configure Gradle to use service account
+          # Install Firebase CLI if not available
+          if ! command -v firebase &> /dev/null; then
+            echo "📦 Installing Firebase CLI..."
+            npm install -g firebase-tools
+          fi
+
+          # Authenticate with service account
           SERVICE_ACCOUNT_FILE="${{ runner.temp }}/firebase-service-account.json"
-          export FIREBASE_SERVICE_ACCOUNT_FILE="$SERVICE_ACCOUNT_FILE"
+          export GOOGLE_APPLICATION_CREDENTIALS="$SERVICE_ACCOUNT_FILE"
 
           if [ ! -f "$SERVICE_ACCOUNT_FILE" ]; then
             echo "❌ Service account file not found at $SERVICE_ACCOUNT_FILE"
             exit 1
           fi
 
-          echo "📤 Uploading APK to Firebase App Distribution..."
-          echo "Using service account: $SERVICE_ACCOUNT_FILE"
+          echo "📤 Uploading APK to Firebase App Distribution using Firebase CLI..."
+          echo "Package: com.jackmarvelsapp.dev"
 
-          ./gradlew appDistributionUploadDevelopRelease \
-            -PfirebaseServiceAccountFile="$SERVICE_ACCOUNT_FILE" \
-            --no-daemon \
-            --stacktrace
+          # Get the develop app ID from secret, or use the default from google-services.json
+          # Note: Both production and develop builds upload to the SAME Firebase project
+          # and use the SAME tester groups. They just need separate Firebase apps because
+          # Firebase requires package names to match.
+          DEVELOP_APP_ID="${{ secrets.FIREBASE_DEVELOP_APP_ID }}"
+
+          # Default to the app ID from google-services.json if secret is not set
+          if [ -z "$DEVELOP_APP_ID" ]; then
+            DEVELOP_APP_ID="1:452248149004:android:7293af8d9628f9d8af2229"
+            echo "ℹ️ Using default develop app ID from google-services.json"
+          fi
+
+          # Use Firebase CLI to upload to the same project and tester groups
+          echo "📤 Uploading to Firebase App Distribution..."
+          echo "   Project: alpha-vlogs-cf60a"
+          echo "   Tester Group: testers (same as production)"
+          echo "   App ID: $DEVELOP_APP_ID"
+
+          firebase appdistribution:distribute "$APK_PATH" \
+            --app "$DEVELOP_APP_ID" \
+            --groups "testers" \
+            --release-notes "Development build - Alpha Vlogs Dev - $(date -u +'%Y-%m-%d %H:%M:%S UTC')" \
+            --project "alpha-vlogs-cf60a"
 
           echo "✅ Successfully uploaded to Firebase App Distribution"
         continue-on-error: true
@@ -180,24 +204,44 @@ jobs:
           echo "✅ AAB found: $AAB_PATH"
           echo "📦 AAB size: $(du -h "$AAB_PATH" | cut -f1)"
 
-          cd android
-          # Configure Gradle to use service account
+          # Install Firebase CLI if not available
+          if ! command -v firebase &> /dev/null; then
+            echo "📦 Installing Firebase CLI..."
+            npm install -g firebase-tools
+          fi
+
+          # Authenticate with service account
           SERVICE_ACCOUNT_FILE="${{ runner.temp }}/firebase-service-account.json"
-          export FIREBASE_SERVICE_ACCOUNT_FILE="$SERVICE_ACCOUNT_FILE"
+          export GOOGLE_APPLICATION_CREDENTIALS="$SERVICE_ACCOUNT_FILE"
 
           if [ ! -f "$SERVICE_ACCOUNT_FILE" ]; then
             echo "❌ Service account file not found at $SERVICE_ACCOUNT_FILE"
             exit 1
           fi
 
-          echo "📤 Uploading AAB to Firebase App Distribution..."
-          echo "Using service account: $SERVICE_ACCOUNT_FILE"
+          echo "📤 Uploading AAB to Firebase App Distribution using Firebase CLI..."
+          echo "Package: com.jackmarvelsapp.dev"
 
-          # Try using Gradle task (it may auto-detect AAB)
-          ./gradlew appDistributionUploadDevelopRelease \
-            -PfirebaseServiceAccountFile="$SERVICE_ACCOUNT_FILE" \
-            --no-daemon \
-            --stacktrace
+          # Get the develop app ID from secret, or use the default from google-services.json
+          DEVELOP_APP_ID="${{ secrets.FIREBASE_DEVELOP_APP_ID }}"
+
+          # Default to the app ID from google-services.json if secret is not set
+          if [ -z "$DEVELOP_APP_ID" ]; then
+            DEVELOP_APP_ID="1:452248149004:android:7293af8d9628f9d8af2229"
+            echo "ℹ️ Using default develop app ID from google-services.json"
+          fi
+
+          # Use Firebase CLI to upload to the same project and tester groups
+          echo "📤 Uploading to Firebase App Distribution..."
+          echo "   Project: alpha-vlogs-cf60a"
+          echo "   Tester Group: testers (same as production)"
+          echo "   App ID: $DEVELOP_APP_ID"
+
+          firebase appdistribution:distribute "$AAB_PATH" \
+            --app "$DEVELOP_APP_ID" \
+            --groups "testers" \
+            --release-notes "Development build - Alpha Vlogs Dev - $(date -u +'%Y-%m-%d %H:%M:%S UTC')" \
+            --project "alpha-vlogs-cf60a"
 
           echo "✅ Successfully uploaded to Firebase App Distribution"
         continue-on-error: true
