--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -200,6 +200,97 @@ jobs:
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
 
+      - name: Export IPA from Archive
+        run: |
+          cd ios
+          xcodebuild -exportArchive \
+            -archivePath $PWD/build/JackMarvelsApp-production.xcarchive \
+            -exportPath $PWD/build/export \
+            -exportOptionsPlist $PWD/ExportOptions.plist \
+            -allowProvisioningUpdates || {
+              echo "⚠️ IPA export failed. This is expected if code signing is not configured."
+              echo "   Archive is still available for manual export."
+              exit 0
+            }
+
+      - name: Setup Firebase Service Account
+        id: setup_firebase_ios
+        env:
+          FIREBASE_SA_JSON: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
+        run: |
+          SERVICE_ACCOUNT_FILE="${{ runner.temp }}/firebase-service-account.json"
+          if [ -n "$FIREBASE_SA_JSON" ]; then
+            echo "$FIREBASE_SA_JSON" > "$SERVICE_ACCOUNT_FILE"
+            if [ -f "$SERVICE_ACCOUNT_FILE" ]; then
+              echo "✅ Firebase service account configured"
+              echo "firebase_configured=true" >> $GITHUB_OUTPUT
+            else
+              echo "❌ Failed to write Firebase service account file."
+              echo "firebase_configured=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "⚠️ FIREBASE_SERVICE_ACCOUNT_JSON secret not found. Skipping Firebase App Distribution upload."
+            echo "firebase_configured=false" >> $GITHUB_OUTPUT
+          fi
+        continue-on-error: true
+
+      - name: Upload IPA to Firebase App Distribution
+        if: steps.setup_firebase_ios.outputs.firebase_configured == 'true'
+        run: |
+          # Install Firebase CLI if not available
+          if ! command -v firebase &> /dev/null; then
+            echo "📦 Installing Firebase CLI..."
+            npm install -g firebase-tools
+          fi
+
+          # Authenticate with service account
+          SERVICE_ACCOUNT_FILE="${{ runner.temp }}/firebase-service-account.json"
+          export GOOGLE_APPLICATION_CREDENTIALS="$SERVICE_ACCOUNT_FILE"
+
+          # iOS App ID for production (from GoogleService-Info.plist)
+          # This is for bundle ID: com.jackmarvelsapp
+          IOS_APP_ID="1:452248149004:ios:3f3fbc0a54e0f0fbaf2229"
+
+          # Try to find IPA file
+          IPA_PATH="ios/build/export/JackMarvelsApp.ipa"
+
+          if [ ! -f "$IPA_PATH" ]; then
+            echo "⚠️ IPA not found at $IPA_PATH."
+            echo "   This is expected if code signing is not configured for CI/CD."
+            echo "   Archive is available for manual export and upload."
+            exit 0
+          fi
+
+          echo "✅ IPA found: $IPA_PATH"
+          echo "📦 IPA size: $(du -h "$IPA_PATH" | cut -f1)"
+          echo "📤 Uploading to Firebase App Distribution..."
+          echo "   Project: alpha-vlogs-cf60a"
+          echo "   Tester Group: testers"
+          echo "   App ID: $IOS_APP_ID"
+
+          firebase appdistribution:distribute "$IPA_PATH" \
+            --app "$IOS_APP_ID" \
+            --groups "testers" \
+            --release-notes "iOS Production build - Alpha Vlogs - $(date -u +'%Y-%m-%d %H:%M:%S UTC')" \
+            --project "alpha-vlogs-cf60a" || {
+              echo ""
+              echo "⚠️ Upload succeeded but distribution to 'testers' group failed."
+              echo "   This usually means the 'testers' group doesn't exist for this app yet."
+              echo ""
+              echo "📝 To fix this:"
+              echo "   1. Go to: https://console.firebase.google.com/project/alpha-vlogs-cf60a/appdistribution"
+              echo "   2. Select the iOS app: com.jackmarvelsapp"
+              echo "   3. Go to 'Testers & Groups' tab"
+              echo "   4. Create a group named 'testers' or add testers directly"
+              echo "   5. The build is already uploaded and available in the Releases tab"
+              echo ""
+              echo "✅ Build uploaded successfully - available for manual distribution"
+              exit 0
+            }
+
+          echo "✅ Successfully uploaded and distributed to Firebase App Distribution"
+        continue-on-error: true
+
       - name: Upload iOS Archive
         uses: actions/upload-artifact@v4
         with:
